Imagen del login

--- a/LabWebAppBlazor/Components/Pages/Login.razor
+++ b/LabWebAppBlazor/Components/Pages/Login.razor
@@ -20,7 +20,7 @@
 <div class="container d-flex align-items-center justify-content-center vh-100">
     <div class="row w-100 shadow-lg rounded p-4 bg-white" style="max-width: 900px;">
         <div class="col-md-6 d-none d-md-flex align-items-center justify-content-center">
-            <img src="images/login-art.png" class="img-fluid rounded" alt="Ilustración de inicio de sesión" />
+            <img src="images/login.png" class="img-fluid rounded" alt="Ilustración de inicio de sesión" />
         </div>
         <div class="col-md-6">
             <h3 class="mb-4 fw-bold text-primary">
